--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.xian</groupId>
-    <artifactId>sqlGenerater</artifactId>
+    <artifactId>sqlGenerator</artifactId>
     <version>1.0</version>
 
     <properties>
@@ -34,6 +34,19 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.19</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.18</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
     </dependencies>
 
 </project>
