--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+
     </dependencies>
 
 </project>
